change API HTTP method & swagger file
